# localif

./: .gitignore  README.md
app/: settings.gradle
image-recovery/: extractors.c  extractors.h  hist.c  hist.h  index.txt  list.c  list.h  main.c  matrix.c  matrix.h  pgmConverter.py  utils.c  utils.h
image-recovery/histogram-extractor/: index.txt
image-recovery/images-to-pgm/: img-0.pgm  img-1.pgm  img-100.pgm  img-107.pgm  img-109.pgm  img-115.pgm  img-119.pgm  img-126.pgm  img-128.pgm  img-129.pgm  img-132.pgm  img-134.pgm  img-139.pgm  img-140.pgm  img-143.pgm  img-144.pgm  img-151.pgm  img-152.pgm  img-153.pgm  img-16.pgm  img-169.pgm  img-171.pgm  img-175.pgm  img-176.pgm  img-178.pgm  img-190.pgm  img-195.pgm  img-197.pgm  img-200.pgm  img-205.pgm  img-21.pgm  img-210.pgm  img-217.pgm  img-228.pgm  img-26.pgm  img-27.pgm  img-3.pgm  img-30.pgm  img-31.pgm  img-35.pgm  (+20 more)
image-recovery/pgm-images/: img-10.pgm  img-101.pgm  img-102.pgm  img-103.pgm  img-105.pgm  img-106.pgm  img-108.pgm  img-11.pgm  img-110.pgm  img-111.pgm  img-112.pgm  img-113.pgm  img-114.pgm  img-116.pgm  img-117.pgm  img-118.pgm  img-120.pgm  img-121.pgm  img-122.pgm  img-123.pgm  img-124.pgm  img-125.pgm  img-127.pgm  img-13.pgm  img-130.pgm  img-133.pgm  img-135.pgm  img-136.pgm  img-137.pgm  img-138.pgm  img-14.pgm  img-142.pgm  img-146.pgm  img-147.pgm  img-149.pgm  (+93 more)
image_recovery_algorithm/: extractors.c  extractors.h  hist.c  hist.h  list.c  list.h  main.c  matrix.c  utils.c  utils.h
localif-app/: settings.gradle
localif-app/Localif/app/src/main/cpp/: CMakeLists.txt  localif.cpp
(+469 files in other folders)
